--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.5",
     "react": "^18.3.1",
